--- a/FinPlan.Web/Components/Layout/NavMenu.razor
+++ b/FinPlan.Web/Components/Layout/NavMenu.razor
@@ -51,7 +51,7 @@
 
 
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+<div class="nav-scrollable" onclick="(function(){ const btn = document.querySelector('.navbar-toggler'); if (btn && typeof btn.click === 'function') { try { btn.click(); } catch(e) { console.error('nav-scrollable click failed', e); } } })()">
     <nav class="nav flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
